@@ -1,18 +1,13 @@
 package com.github.javachaos.chaosdungeons.ecs.entities;
 
 import com.github.javachaos.chaosdungeons.ecs.components.Component;
+
+import java.util.*;
+
 import com.github.javachaos.chaosdungeons.ecs.components.render.RenderComponent;
-import java.util.Collections;
-import java.util.Deque;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.ConcurrentLinkedDeque;
-import java.util.stream.Collectors;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.joml.Vector2f;
 
 /**
  * Simple Entity class.
@@ -20,23 +15,19 @@ import org.apache.logging.log4j.Logger;
  * @author Javachaos
  */
 @SuppressWarnings("unused")
-public abstract class Entity extends Component {
+public abstract class Entity {
 
   private static final Logger LOGGER = LogManager.getLogger(Entity.class);
 
   private static final int REMOVAL_THRESHOLD = 256;
+  private long id;
+  private long eid;
+  protected Vector2f pos;
+  private final Map<Long, Component> components = new LinkedHashMap<>();
 
-  /**
-   * Basic idea here, each entity has a list of components.
-   * Store these components via class type, if there are multiples of
-   * the same class type, we store them via their id.
-   * If two components share the same id, then only one instance is kept.
-   */
-  private final Map<Class<? extends Entity>, Deque<Component>> components =
-      Collections.synchronizedMap(new HashMap<>());
-
-  public Entity() {
+  protected Entity() {
     super();
+    id = 0;
   }
 
   public abstract void init();
@@ -47,76 +38,34 @@ public abstract class Entity extends Component {
    * @param c the component to add.
    */
   public void addComponent(Component c) {
-    if (!components.containsKey(getClass())) {
-      components.put(getClass(), new ConcurrentLinkedDeque<>());
-    }
-    c.setEntity(this);
-    c.onAdded(this);
-    components.get(getClass()).offerLast(c);
-  }
-
-  /**
-   * Add a component to this entity.
-   *
-   * @param front true if the component c should be added to the front
-   *              of the list of components.
-   * @param c the component to add.
-   */
-  public void addComponent(boolean front, Component c) {
-    if (!components.containsKey(getClass())) {
-      components.put(getClass(), new ConcurrentLinkedDeque<>());
-    }
-    if (front) {
+    if (c != null) {
+      c.setIndex(id++);
+      components.put(id, c);
       c.setEntity(this);
-      c.onAdded(this);
-      components.get(getClass()).offerFirst(c);
-    } else {
-      c.setEntity(this);
-      c.onAdded(this);
-      components.get(getClass()).offerLast(c);
     }
   }
 
-  /**
-   * Get a component for this entity based on it's class type.
-   *
-   * @param clazz the type of component.
-   * @return the component of type clazz
-   *
-   */
   public <T extends Component> T getComponent(Class<T> clazz) {
-    return components.get(getClass())
-           .stream()
-           .filter(x -> x.getClass().equals(clazz))
-           .findFirst()
-           .map(clazz::cast)
-           .orElse(null);
+    return components.values().stream()
+            .filter(x -> clazz.isAssignableFrom(x.getClass()))
+            .findFirst().map(clazz::cast).orElse(null);
   }
 
-  /**
-   * Get all components of type clazz for this entity.
-   *
-   * @param clazz the type of components
-   * @return the list of components of type clazz
-   */
   public <T extends Component> List<T> getComponents(Class<T> clazz) {
-    return components.get(getClass())
-           .stream()
-           .filter(x -> x.getClass().equals(clazz))
-           .map(clazz::cast) // Cast the component to the desired type
-           .collect(Collectors.toList());
+    return components.values().stream()
+            .filter(x -> clazz.isAssignableFrom(x.getClass()))
+            .map(clazz::cast)
+            .toList();
   }
 
-  /**
-   * Return the list of components associated with this Entity.
-   *
-   * @return the components of this entity.
-   */
+  public List<RenderComponent> getRenderComponents() {
+    return components.values().stream().filter(RenderComponent.class::isInstance)
+            .map(RenderComponent.class::cast)
+            .toList();
+  }
+
   public List<Component> getComponents() {
-    return components.get(getClass())
-        .stream()
-        .map(Component.class::cast)
-        .collect(Collectors.toList());
+    return List.copyOf(components.values());
   }
 
   /**
@@ -125,7 +74,7 @@ public abstract class Entity extends Component {
    * @param c the component to be removed.
    */
   public void removeComponent(Component c) {
-    c.remove();
+    components.remove(c.getIndex());
   }
 
   protected abstract void update(float dt);
@@ -133,32 +82,11 @@ public abstract class Entity extends Component {
   /**
    * Update order based on id value. (Lower ids are updated first)
    */
-  @Override
   public void update(double dt) {
-    for (Component c : getComponents()) { // differentiate render components from the rest.
-      if (!c.isRemoved() && !(c instanceof RenderComponent)) {
+    for (Component c : getComponents()) {
         c.update(dt);
-      }
     }
     update((float) dt);
-    checkRemoval();
-  }
-
-  /**
-   * Check if there are enough removed components to warrant a
-   * large removal operation.
-   */
-  private void checkRemoval() {
-    if (Component.getRemovalCount() > REMOVAL_THRESHOLD) {
-      Set<Component> remove = new HashSet<>();
-      components.values().forEach(c -> c.stream().filter(Component::isRemoved)
-          .forEach(remove::add));
-      if (Entity.this instanceof GameEntity) {
-        remove.forEach(c -> onRemoved(Entity.this));
-      }
-      remove.forEach(Component::destroy);
-      remove.forEach(c -> components.get(c.getClass()).remove(c));
-    }
   }
 
   /**
@@ -167,31 +95,25 @@ public abstract class Entity extends Component {
   public abstract void destroy();
 
   public void shutdown() {
-    components.values().forEach(v -> v.forEach(Component::destroy));
+    components.values().forEach(Component::destroy);
     destroy();
   }
 
-  /**
-   * Returns true if this entity contains at least 1 instance of component.
-   *
-   * @param component the component to look for.
-   * @return true if this entity contains at least 1 of component
-   */
   public boolean hasComponent(Component component) {
-    return getComponents().contains(component);
+    return components.containsValue(component);
   }
 
-  /**
-   * Returns true if this entity contains at least 1 instance of component.
-   *
-   * @param component the component to look for.
-   * @return true if this entity contains at least 1 of component
-   */
   public <T extends Component> boolean hasComponent(Class<T> component) {
-    Deque<Component> comps = components.get(getClass());
-    if (comps == null) {
-      return false;
-    }
-    return comps.stream().anyMatch(c -> component.isAssignableFrom(c.getClass()));
+    return components.values().stream()
+            .anyMatch(component::isInstance);
   }
+
+  public void setEntityId(long i) {
+    this.eid = i;
+  }
+
+  public long getEntityId() {
+    return eid;
+  }
+
 }
